--- a/example.ipynb
+++ b/example.ipynb
@@ -72,7 +72,7 @@
    "source": [
     "from langchain_openai import ChatOpenAI\n",
     "\n",
-    "llm = ChatOpenAI(openai_api_key=\"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\")"
+    "llm = ChatOpenAI(openai_api_key=\"")"
    ]
   },
   {
